# oatmux

./: .gitignore  CMakeLists.txt  README.md  build.sh  compile.sh  install.sh
include/: server.h  session.h  terminal.h  websocket.h
src/: main.c  server.c  session.c  terminal.c  websocket.c
